--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="image/j.jpg" alt="Jirawat Profile picture"></td>
+        <td><img src="https://github.com/JirawatChayayan/CV/blob/master/image/J.jpg?raw=true" alt="Jirawat Profile picture"></td>
         <td><h1>Jirawat Chayayan JC</h1>
         <p><em>Automation Engineer <strong><a href="https://www.utacgroup.com/">UTAC Thai</a></strong>.</em></p>
         <p> I am an Machine Automation Maker. I love electronic.</p></td>
