--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8"><!-- text encoding in this code  -->
-    <title>💝Jirawat's Personal Website</title><!--Name in google tab -->
+    <title>Jirawat's Personal Website</title><!--Name in google tab -->
   </head>
 
   <body>
